# AoC2021

./: .envrc  .style.yapf  pyproject.toml
1/: data.py
10/: data.py  main.py
11/: data.py  main.py
12/: data.py  main.py
13/: data.py  main.py
14/: data.py  main.py
15/: data.py  main.py
16/: m2.py  main.py  old.py  old2.py
17/: main.py  tmp.py  v2.py
2/: data.py  main.py
3/: data.py  main.py
4/: data.py  main.py
5/: data.py  main.py  v1.py
6/: data.py  main.py
7/: data.py  main.py
8/: data.py  main.py  v1.py
9/: data.py  main.py
one/: data.py  main.py
two/: main.py
